feat: creating add news and swagger annotation
